feat: add person and deals documentation